Add js / css concat

--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <title>Code test - EDP</title>
 
-    <link rel="stylesheet" type="text/css" href="./assets/css/app.css">
-    <link rel="stylesheet" type="text/css" href="./assets/fonts/style.css">
-
-    <link rel="stylesheet" type="text/css" href="./modules/core/thermo/thermo.css">
+    <link rel="stylesheet" type="text/css" href="./dist/app.concate.css">
 
 </head>
 <body>
@@ -18,18 +15,7 @@
     </section>
 
     <script src="./node_modules/angular/angular.min.js"></script>
-
-    <script src="./modules/utils/converters/converters.module.js"></script>
-    <script src="./modules/utils/converters/converters.service.js"></script>
-
-    <script src="./modules/core/thermo/thermo.module.js"></script>
-    <script src="./modules/core/thermo/thermo.service.js"></script>
-    <script src="./modules/core/thermo/thermo.component.js"></script>
-
-
-    <script src="./assets/js/app.js"></script>
-
-
+    <script src="./dist/app.concate.js"></script>
 
 </body>
 </html>
